package jp.sgk.businesstrip.domain.employee

class Employee(val name: Name, val capacity: Capacity, val address: Address) {
    val id : Int = 0
}