package jp.sgk.businesstrip.domain.fee.a

import jp.sgk.businesstrip.domain.common.Calender
import jp.sgk.businesstrip.domain.common.Location


class Arrival(val calender: Calender, val location: Location) {
}